--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 src/test
-src/main/resources
+src/main/resources/application.yaml
 
 ### STS ###
 .apt_generated
